# wordle

./: .gitignore  README.md  pyproject.toml  wordle.hs  wordle.py  words.txt
