[tool.poetry]
name = "wordle"
version = "0.1.0"
description = "A solver for the WORDLE word game."
authors = ["Joe Kerrigan <joek1301@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
